Fix misalignment of header and main

--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -6,37 +6,34 @@ body {
   position: relative; 
 }
 
-main {
-  padding: 200px 50px 50px;
-  margin: 0 auto;
-  max-width: 750px;
-}
-
-header, nav, footer {
+body, header, main {
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 nav, footer {
+  display: flex;
+  flex-direction: row;
   justify-content: space-evenly;
+  width: 100%;
 }
 
-header, footer {
-  padding: 50px;
-  margin: 0 auto;
+header, main, footer {
   max-width: 750px;
-
+  padding: 50px;
 }
 
-/* header is flush with left wall; how to keep absolute */ 
-/* positioning and allow the left/right margins to be automatic? */
+main {
+  padding-top: 200px;
+}
+
 header {
-  flex-direction: column;
   position: fixed;
   top: 0px;
   width: 100%;
   background-color: #fff;
 }
-
 
 h1, h2, h3 {
   font-size: 26px;
@@ -67,7 +64,6 @@ p {
 }
 
 a {
-  /* padding: 10px; */
   color: inherit;
   text-decoration: none;
 }
